--- a/js/directives/ab-page/templates/ab-page.html
+++ b/js/directives/ab-page/templates/ab-page.html
@@ -2,7 +2,7 @@
   <ul>
     <li gridster-item="widget.tile" ng-repeat="widget in page">
       <ab-widget-container ng-click="dispatchWidgetFocus(widget)"
-        widget-title="widget.title" widget-type="widget.type"
+        widget-title="widget.title" widget-tag="widget.tag"
         widget-data="widget.data">
       </ab-widget-container>
     </li>
