--- a/js/templates/_widget-config.html
+++ b/js/templates/_widget-config.html
@@ -1,4 +1,4 @@
 <div ng-controller="WidgetConfigCtrl">
   <h4>Widget Configuration</h4>
-  <ab-compile template="configTemplate" expose="{data: widgetData}" ng-if="configTemplate"></ab-compile>
+  <ab-compile template="widgetConfigTemplate" expose="exposedData"></ab-compile>
 </div>
