--- a/js/widgets/simple-gallery/templates/config.html
+++ b/js/widgets/simple-gallery/templates/config.html
@@ -1,6 +1,6 @@
-<form class="form" ng-controller="simpleGalleryWidgetConfigCtrl">
+<form class="form">
   <div class="form-group">
     <label>Images</label>
-    <ab-resources select-mode="true" selected-files="data.selectedImages"></ab-resources>
+    <ab-resources select-mode="true" selected-resources="data.selectedImages"></ab-resources>
   </div>
 </form>
